Fix: list display when overflow

--- a/src/components/MusicList/MusicList.module.scss
+++ b/src/components/MusicList/MusicList.module.scss
@@ -1,4 +1,6 @@
 .container {
+  overflow-y: auto;
+
   height: 70vh;
   margin-top: 40px;
 
